# shuttle_pro_v2_driver

./: .gitignore  99-hid-shuttlepro.rules  LICENSE  Makefile  README.md  dkms.conf  hid-shuttlepro-kunit.c  hid-shuttlepro.c  hid-shuttlepro.modules-load.conf  shuttlepro-report.h
.github/workflows/: ci.yml
docs/: HARDENING.md  INSTALL.md  UAT.md
scripts/: find-event.sh  install.sh  run-kunit.sh  test-events.sh
tests/: ci.sh  dkms-isolated.sh  static-analysis.sh  test_decode.c  test_find_event.sh  test_metadata.sh
tests/fixtures/: input-devices-no-shuttle.txt  input-devices-shuttle.txt
userspace/: Cargo.toml  README.md
userspace/profiles/: kdenlive.toml  test.toml
userspace/src/: config.rs  device.rs  input.rs  keys.rs  lib.rs  mapper.rs  uinput.rs
userspace/systemd/: shuttleprod.service
