[package]
name = "shuttlepro-userspace"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "Userspace mapper and test tools for the Contour ShuttlePro v2 Linux driver"

[lib]
name = "shuttlepro"
path = "src/lib.rs"

[[bin]]
name = "shuttleproctl"
path = "src/bin/shuttleproctl.rs"

[[bin]]
name = "shuttleprod"
path = "src/bin/shuttleprod.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
libc = "0.2"
ratatui = "0.29"
signal-hook = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
